--- a/package.json
+++ b/package.json
@@ -22,15 +22,28 @@
     "url": "https://www.captaincodeman.com/"
   },
   "scripts": {
+    "build": "tsup",
     "dev": "vite dev",
-    "build": "vite build",
-    "package": "svelte-kit package",
-    "preview": "vite preview",
     "test": "vitest run src",
     "test:watch": "vitest src",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "sourcemaps": "source-map-explorer .svelte-kit/output/client/_app/immutable/pages/*.js .svelte-kit/output/client/_app/immutable/chunks/*.js"
+    "sourcemap": "source-map-explorer dist/*.js"
+  },
+  "tsup": {
+    "entry": [
+      "src/lib/index.ts"
+    ],
+    "format": [
+      "esm"
+    ],
+    "external": [
+      "svelte/store"
+    ],
+    "sourcemap": true,
+    "minify": true,
+    "clean": true,
+    "dts": true
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
@@ -39,22 +52,24 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.1.3",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.8",
     "happy-dom": "^6.0.4",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "postcss-load-config": "^4.0.1",
     "source-map-explorer": "^2.5.2",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.7.1",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.8.1",
     "svelte-preprocess": "^4.10.7",
-    "svelte2tsx": "^0.5.13",
-    "tailwindcss": "^3.1.5",
-    "tslib": "^2.3.1",
+    "svelte2tsx": "^0.5.14",
+    "tailwindcss": "^3.1.8",
+    "tslib": "^2.4.0",
+    "tsup": "^6.2.2",
     "typescript": "^4.7.4",
-    "vite": "^3.0.0",
-    "vitest": "^0.21.1"
+    "vite": "^3.0.8",
+    "vitest": "^0.22.0"
   },
   "dependencies": {
+    "nanostores": "^0.6.0",
     "svelte-transition": "^0.0.5"
   }
 }
