--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "tailwindui",
     "renderless"
   ],
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/captaincodeman/svelte-headlessui.git"
@@ -60,7 +63,6 @@
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.1",
     "svelte-preprocess": "^4.10.7",
-    "svelte2tsx": "^0.5.14",
     "tailwindcss": "^3.1.8",
     "tslib": "^2.4.0",
     "tsup": "^6.2.2",
@@ -69,7 +71,6 @@
     "vitest": "^0.22.0"
   },
   "dependencies": {
-    "nanostores": "^0.6.0",
     "svelte-transition": "^0.0.5"
   }
 }
