--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -18,6 +18,7 @@
   "exports": {
     ".": "./dist/index.js"
   },
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/captaincodeman/svelte-headlessui.git"
