--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-headlessui",
+  "name": "svelte-headlessui-root",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
