--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -10,24 +10,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@algolia/client-search": "^4.13.1",
-    "@docsearch/css": "^3.1.0",
-    "@docsearch/react": "^3.1.0",
-    "@types/react": "^18.0.18",
-    "preact": "^10.7.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "svelte-headlessui": "workspace:*",
+    "@algolia/client-search": "^4.14.2",
+    "@docsearch/css": "^3.3.0",
+    "@docsearch/react": "^3.3.0",
+    "@types/react": "^18.0.25",
+    "preact": "^10.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "svelte-headlessui": "workspace:0.0.1-alpha.3",
     "svelte-transition": "^0.0.6"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^0.11.1",
-    "@astrojs/preact": "^1.0.2",
-    "@astrojs/react": "^1.0.0",
-    "@astrojs/svelte": "^1.0.0",
-    "@astrojs/tailwind": "^2.0.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "astro": "^1.0.7",
-    "svelte": "^3.46.4"
+    "@astrojs/mdx": "^0.11.6",
+    "@astrojs/preact": "^1.2.0",
+    "@astrojs/react": "^1.2.2",
+    "@astrojs/svelte": "^1.0.2",
+    "@astrojs/tailwind": "^2.1.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "astro": "^1.6.9",
+    "svelte": "^3.53.1"
   }
 }
