--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,25 @@ permissions:
   id-token: write
 
 jobs:
-  build:
+  lib:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout your repository using git
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: pnpm
+      - name: Install dependencies
+      - run: pnpm install --frozen-lockfile
+      - name: Build lib
+        run: pnpm run --filter lib build
+
+  build:
+    needs: lib
+    runs-on: ubuntu-latest
+    steps:
       - name: Install, build, and upload your site
         uses: withastro/action@v0
         with:
