--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: 18
           cache: pnpm
       - name: Install dependencies
-      - run: pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
       - name: Build lib
         run: pnpm run --filter lib build
 
