--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2.2.4
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
