--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -18,7 +18,7 @@
   "exports": {
     ".": "./dist/index.js"
   },
-  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "homepage": "https://captaincodeman.github.io/svelte-headlessui/",
   "repository": {
