--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svelte-headlessui",
   "description": "HeadlessUI components for Svelte",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "type": "module",
   "keywords": [
     "svelte",
@@ -16,7 +16,10 @@
     "dist"
   ],
   "exports": {
-    ".": "./dist/index.js"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
   },
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -32,10 +35,12 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "svelte-kit sync && tsup",
     "dev": "vite dev",
+    "build": "vite build",
     "test": "vitest run src",
     "test:watch": "vitest src",
+    "package": "svelte-kit sync && tsup && publint",
+    "prepublishOnly": "npm run package",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint --max-warnings 0 --report-unused-disable-directives --ignore-path ./.gitignore \"**/*.{js,cjs,mjs,ts,cts,mts,svelte}\"",
@@ -57,32 +62,33 @@
     "dts": true
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "1.0.0",
-    "@sveltejs/kit": "1.0.1",
+    "@sveltejs/adapter-auto": "^2.1.0",
+    "@sveltejs/kit": "^1.20.4",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.2",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.30.0",
-    "eslint-plugin-svelte": "^2.14.1",
-    "happy-dom": "^8.1.1",
-    "postcss": "^8.4.20",
+    "@types/testing-library__jest-dom": "^5.14.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.43.0",
+    "eslint-plugin-svelte": "^2.31.0",
+    "happy-dom": "^9.20.3",
+    "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
+    "publint": "^0.1.12",
     "source-map-explorer": "^2.5.3",
-    "svelte": "^3.55.0",
-    "svelte-check": "^3.0.1",
-    "svelte-preprocess": "^5.0.0",
-    "tailwindcss": "^3.2.4",
-    "tslib": "^2.4.1",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.3",
-    "vitest": "^0.26.2"
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.4.4",
+    "svelte-preprocess": "^5.0.4",
+    "tailwindcss": "^3.3.2",
+    "tslib": "^2.5.3",
+    "tsup": "^7.0.0",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9",
+    "vitest": "^0.32.2"
   },
   "dependencies": {
-    "svelte-transition": "^0.0.7"
+    "svelte-transition": "^0.0.10"
   }
 }
