--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build lib
-        run: pnpm --filter svelte-headlessui build
+        run: pnpm --filter svelte-headlessui package
       - name: Install, build, and upload your site
         uses: withastro/action@v0
         with:
