--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -85,8 +85,7 @@
     "tslib": "^2.5.3",
     "tsup": "^7.0.0",
     "typescript": "^5.1.3",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.2"
+    "vite": "^4.3.9"
   },
   "dependencies": {
     "svelte-transition": "^0.0.10"
