--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -8,7 +8,6 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true,
-		"types": ["vitest/globals", "vitest/importMeta", "@testing-library/jest-dom"]
+		"strict": true
 	}
 }
