--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -37,8 +37,6 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "test": "vitest run src",
-    "test:watch": "vitest src",
     "package": "svelte-kit sync && tsup && publint",
     "prepublishOnly": "npm run package",
     "check": "svelte-check --tsconfig ./tsconfig.json",
@@ -63,30 +61,26 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.1.0",
-    "@sveltejs/kit": "^1.20.4",
-    "@tailwindcss/forms": "^0.5.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/svelte": "^3.2.2",
-    "@types/testing-library__jest-dom": "^5.14.6",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@sveltejs/kit": "^1.22.5",
+    "@tailwindcss/forms": "^0.5.4",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.43.0",
-    "eslint-plugin-svelte": "^2.31.0",
-    "happy-dom": "^9.20.3",
-    "postcss": "^8.4.24",
+    "eslint": "^8.47.0",
+    "eslint-plugin-svelte": "^2.32.4",
+    "happy-dom": "^10.9.0",
+    "postcss": "^8.4.27",
     "postcss-load-config": "^4.0.1",
-    "publint": "^0.1.12",
+    "publint": "^0.2.0",
     "source-map-explorer": "^2.5.3",
-    "svelte": "^4.0.0",
-    "svelte-check": "^3.4.4",
+    "svelte": "^4.2.0",
+    "svelte-check": "^3.5.0",
     "svelte-preprocess": "^5.0.4",
-    "tailwindcss": "^3.3.2",
-    "tslib": "^2.5.3",
-    "tsup": "^7.0.0",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.2"
+    "tailwindcss": "^3.3.3",
+    "tslib": "^2.6.1",
+    "tsup": "^7.2.0",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9"
   },
   "dependencies": {
     "svelte-transition": "^0.0.10"
