--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup PNPM
         uses: pnpm/action-setup@v2.2.4
         with:
-          version: 7.x.x
+          version: 8.6.x
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
