--- a/package.json
+++ b/package.json
@@ -59,20 +59,27 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
+    "preview": "vite preview",
     "package": "svelte-kit sync && tsup && publint",
     "prepublishOnly": "npm run package",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint --max-warnings 0 --report-unused-disable-directives --ignore-path ./.gitignore \"**/*.{js,cjs,mjs,ts,cts,mts,svelte}\"",
-    "sourcemap": "source-map-explorer dist/*.js"
+    "sourcemap": "source-map-explorer dist/*.js",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:report": "playwright show-report",
+    "test:update": "playwright test --update-snapshots"
   },
   "devDependencies": {
+    "@playwright/test": "^1.38.1",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.25.1",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "@types/node": "^20.8.2",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.50.0",
     "eslint-plugin-svelte": "^2.34.0",
