Add export condition for SvelteKit 2

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "svelte": "./dist/index.js"
     }
   },
   "module": "dist/index.js",
