--- a/package.json
+++ b/package.json
@@ -80,9 +80,10 @@
 		"@playwright/test": "^1.48.1",
 		"@sveltejs/adapter-static": "^3.0.5",
 		"@sveltejs/kit": "^2.7.2",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^20.17.0",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
 		"@typescript-eslint/parser": "^7.18.0",
@@ -93,15 +94,15 @@
 		"postcss": "^8.4.47",
 		"postcss-load-config": "^6.0.1",
 		"prettier-plugin-svelte": "^3.2.7",
-		"prettier-plugin-tailwindcss": "^0.6.8",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"publint": "^0.2.12",
 		"source-map-explorer": "^2.5.3",
-		"svelte": "^4.2.19",
-		"svelte-check": "^3.8.6",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
 		"svelte-doc-kit": "^0.0.10",
 		"svelte-preprocess": "^6.0.3",
 		"svelte-transition": "^0.0.17",
-		"tailwindcss": "^3.4.14",
+		"tailwindcss": "^4.0.0",
 		"tslib": "^2.8.0",
 		"tsup": "^8.3.0",
 		"typescript": "^5.6.3",
